--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
   <head>
     <!-- Basic Page Needs -->
     <meta charset="UTF-8" />
@@ -7,8 +7,30 @@
 
     <!-- Meta Tags for SEO -->
     <title>سالو</title>
-
     <meta name="author" content="محمد سالو" />
+    <meta name="keywords" content="محمد سالو, سالو, مطور ويب, سالو ويب, ديف سالو, مشاريع سالو, متجر سالو, أدوات برمجية, مشاريع برمجة, تطوير مواقع, تصميم مواقع, فرونت اند, باك اند, فل ستاك, تطبيقات ويب, شراء أدوات برمجية, مطور مواقع, مبرمج ويب, حلول برمجية" />
+    <meta name="description" content="محمد سالو - مطور ويب مصري. بشتغل على إنشاء مشاريع ومواقع وتطبيقات ويب." />
+
+    <!-- Search Engine Optimization -->
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="ar" />
+    <meta name="distribution" content="global" />
+
+    <!-- Open Graph -->
+    <meta property="og:locale" content="ar_AR" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="المطور محمد سالو" />
+    <meta property="og:description" content="محمد سالو - مطور ويب مصري. بشتغل على إنشاء مشاريع ومواقع وتطبيقات ويب." />
+    <meta property="og:site_name" content="محمد سالو" />
+    <meta property="og:image" content="https://h.top4top.io/p_3584zruvf1.png" />
+    <meta property="og:image:alt" content="صورة المطور محمد سالو" />
+    <meta property="og:url" content="http://saloodev.vercel.app/" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="الرئيسية - سالو" />
+    <meta name="twitter:description" content="محمد سالو - مطور ويب مصري. بشتغل على إنشاء مشاريع ومواقع وتطبيقات ويب." />
+    <meta name="twitter:image" content="https://h.top4top.io/p_3584zruvf1.png" />
 
     <!-- Favicon and Apple Touch Icons -->
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -18,25 +40,38 @@
     <!-- Theme Color for Browsers -->
     <meta name="theme-color" content="#000000" />
 
+    <!-- ✅ Google Tag Manager -->
+    <script>
+      (function(w,d,s,l,i){
+        w[l]=w[l]||[];
+        w[l].push({'gtm.start': new Date().getTime(), event:'gtm.js'});
+        var f=d.getElementsByTagName(s)[0],
+            j=d.createElement(s),
+            dl=l!='dataLayer'?'&l='+l:'';
+        j.async=true;
+        j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;
+        f.parentNode.insertBefore(j,f);
+      })(window,document,'script','dataLayer','GTM-TVJ9RCFC');
+    </script>
+    <!-- End Google Tag Manager -->
+
     <!-- Google Fonts & Font Awesome -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <script
-      src="https://kit.fontawesome.com/d79b9c8395.js"
-      crossorigin="anonymous"
-    ></script>
+    <link href="https://fonts.googleapis.com/css2?family=Aref+Ruqaa:wght@400;700&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/d79b9c8395.js" crossorigin="anonymous"></script>
   </head>
-  <body
-    class="min-h-screen bg-gradient-to-br from-gray-100 via-gray-200 to-gray-300 relative"
-  >
-    <div id="root"></div>
+
+  <body class="min-h-screen bg-gradient-to-br from-gray-100 via-gray-200 to-gray-300 relative">
+    <!--  Google Tag Manager (noscript) -->
+    <noscript>
+      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TVJ9RCFC"
+              height="0" width="0"
+              style="display:none;visibility:hidden"></iframe>
+    </noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+    <!-- محتوى صفحتك هنا -->
   </body>
 </html>
