--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -71,7 +71,9 @@
               style="display:none;visibility:hidden"></iframe>
     </noscript>
     <!-- End Google Tag Manager (noscript) -->
-
-    <!-- محتوى صفحتك هنا -->
+    
+      <!-- Root --> 
+    <div id="root"></div>
+    
   </body>
 </html>
