--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">
+<html lang="ar">
   <head>
     <!-- Basic Page Needs -->
     <meta charset="UTF-8" />
